# kameleondb

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIRST-PRINCIPLES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  CLI.md  background-indexing-spec.md  batch-embedding-spec.md  embedding-cache-spec.md  enhancement-44-entity-name-view.md  layer2-implementation-notes.md  layer2-phase2-plan.md  layer2-phase3-plan.md  query-optimization-spec.md
docs/decisions/: 001-hybrid-storage-architecture.md  001-hybrid-storage-implementation-checklist.md  002-llm-native-query-generation.md  README.md
docs/ideas/: openclaw-integration-guide.md
docs/specs/: 001-hybrid-storage.md  002-query-intelligence.md  003-pypi-publishing.md  004-cli-tool.md  005-agent-hints-pattern.md  006-cascading-operations.md  007-many-to-many.md  008-semantic-search.md
docs/tasks/: BACKLOG.md  CURRENT.md  DONE.md
openclaw-skill/: SKILL.md
scripts/: stress_test_1gb.py
skills/openclaw/: SKILL.md
skills/openclaw/examples/: contacts.jsonl
src/kameleondb/: __init__.py  exceptions.py
src/kameleondb/cli/: __init__.py  context.py  main.py  output.py  parsing.py
src/kameleondb/cli/commands/: admin.py  data.py  query.py  schema.py  search.py  storage.py
src/kameleondb/core/: __init__.py  compat.py  connection.py  engine.py  types.py
src/kameleondb/data/: __init__.py  jsonb_query.py  table_manager.py
src/kameleondb/embeddings/: __init__.py  fastembed.py  openai.py  provider.py
src/kameleondb/integrations/: __init__.py
src/kameleondb/integrations/mcp/: __init__.py  server.py
src/kameleondb/query/: __init__.py  context.py  metrics.py  suggestions.py  validator.py
src/kameleondb/schema/: __init__.py  engine.py  migrations.py  models.py
src/kameleondb/search/: __init__.py  engine.py
src/kameleondb/storage/: __init__.py  dedicated.py  migration.py
src/kameleondb/tools/: __init__.py  base.py  registry.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_workflow.py  test_search_integration.py
tests/unit/: __init__.py  test_cascade_operations.py  test_cli.py  test_connection.py  test_llm_query.py  test_many_to_many.py  test_mcp_server.py  test_query.py  test_query_intelligence.py  test_relationships.py  test_schema_engine.py  test_search.py  test_storage.py  test_storage_aware_context.py  test_tools.py  test_types.py
