[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kameleondb"
version = "0.1.0"
description = "Agent-Native Data Platform with Dynamic Schema Engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "KameleonDB Contributors" }
]
keywords = [
    "database",
    "dynamic-schema",
    "agent",
    "llm",
    "ai",
    "sqlalchemy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "kameleondb[mcp,dev,docs]",
]

[project.scripts]
kameleondb-mcp = "kameleondb.integrations.mcp.server:main"

[project.urls]
Homepage = "https://github.com/kameleondb/kameleondb"
Documentation = "https://kameleondb.github.io/kameleondb"
Repository = "https://github.com/kameleondb/kameleondb"
Issues = "https://github.com/kameleondb/kameleondb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kameleondb"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["kameleondb"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "kameleondb.integrations.mcp.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/kameleondb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
