[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kameleondb"
version = "0.2.0"
description = "The First Database Built for Agents to Own, Not Just Query"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "KameleonDB Contributors" }
]
maintainers = [
    { name = "Marcos Santos", email = "marcosnataqs@gmail.com" }
]
keywords = [
    "database",
    "dynamic-schema",
    "agent",
    "llm",
    "ai",
    "sqlalchemy",
    "agentic",
    "ai-native",
    "schema-evolution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "typer>=0.21.0",
    "rich>=14.3.0",
]

[project.optional-dependencies]
postgresql = [
    "psycopg[binary]>=3.1",
]
postgresql-vector = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.0",
]
sqlite = []  # No extra deps - included in Python stdlib
sqlite-vector = [
    "sqlite-vec>=0.1.1",
]
embeddings = [
    "fastembed>=0.4.0",
]
embeddings-openai = [
    "openai>=1.0.0",
]
mcp = [
    "mcp[cli]>=1.2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]
all = [
    "kameleondb[postgresql,mcp,embeddings,dev,docs]",
]

[project.scripts]
kameleondb = "kameleondb.cli.main:main"
kameleondb-mcp = "kameleondb.integrations.mcp.server:main"

[project.urls]
Homepage = "https://github.com/marcosnataqs/kameleondb"
Documentation = "https://marcosnataqs.github.io/kameleondb"
Repository = "https://github.com/marcosnataqs/kameleondb"
Issues = "https://github.com/marcosnataqs/kameleondb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kameleondb"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from exception (not needed for CLI error handling)
]

[tool.ruff.lint.per-file-ignores]
"src/kameleondb/cli/**/*.py" = ["E402", "ARG001"]  # CLI-specific patterns

[tool.ruff.lint.isort]
known-first-party = ["kameleondb"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "kameleondb.integrations.mcp.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
]
filterwarnings = [
    # SQLAlchemy + Python 3.12 sqlite3 datetime adapter deprecation
    # This is an upstream issue - SQLAlchemy will address it in future versions
    # See: https://docs.python.org/3.12/library/sqlite3.html#default-adapters-and-converters-deprecated
    "ignore:The default datetime adapter is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/kameleondb"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
